--- a/lesson_6.1/pytest.ini
+++ b/lesson_6.1/pytest.ini
@@ -3,4 +3,4 @@ python_files = *one.py
 
 markers = 
 
-python_functions = *test_form_submission* *test_calculator*
+python_functions = *test_form_submission* *test_calculator* *test_shop*
